name:                stl-examples
version:             0.2
synopsis:            usage examples for the STL library
description:         STL is a simple file format for representing 3D
                     objects as the triangles which form their
                     surface.  It is common in 3D printing workflows.

                     This library provides parsing and serialization
                     to the ASCII STL format.  The binary STL format
                     is not yet supported.
homepage:            http://github.com/bergey/STL
license:             BSD3
license-file:        LICENSE
author:              Daniel Bergey
maintainer:          bergey@alum.mit.edu
-- copyright:           
category:            Graphics
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10
bug-reports:         http://github.com/bergey/STL/issues

executable indent-stl
  main-is:          Indent.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  build-depends:    base >=4.6 && <4.7,
                    STL >= 0.2 && < 0.3,
                    text >= 1.0 && < 1.2,
                    optparse-applicative >= 0.7,
                    attoparsec >= 0.11 && < 0.12,
                    bytestring >= 0.10 && < 0.11

executable binary-roundtrip
  main-is:          binary-roundtrip.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  build-depends:    base >=4.6 && <4.7,
                    STL >= 0.2 && < 0.3,
                    text >= 1.0 && < 1.2,
                    optparse-applicative >= 0.7,
                    cereal >= 0.4 && < 0.5,
                    bytestring >= 0.10 && < 0.11
